htdocsdir = $(datadir)/forked-daapd/htdocs

htdocs_DATA = \
	admin.html \
	player.html

htdocscssdir = $(datadir)/forked-daapd/htdocs/css

htdocscss_DATA = \
	css/bulma.min.css \
	css/font-awesome.min.css \
	css/forked-daapd.css \
	css/slider.css 

htdocsfontsdir = $(datadir)/forked-daapd/htdocs/fonts

htdocsfonts_DATA = \
	fonts/FontAwesome.otf\
	fonts/fontawesome-webfont.eot \
	fonts/fontawesome-webfont.svg \
	fonts/fontawesome-webfont.ttf \
	fonts/fontawesome-webfont.woff \
	fonts/fontawesome-webfont.woff2

htdocsjsdir = $(datadir)/forked-daapd/htdocs/js

htdocsjs_DATA = \
	js/axios.js \
	js/axios.map \
	js/axios.min.js \
	js/axios.min.map \
	js/forked-daapd.js \
	js/player.js \
	js/vue.js \
	js/vue.min.js
